--- a/index.html
+++ b/index.html
@@ -1,183 +1,217 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>
-        Bellaria
+      Bellaria
     </title>
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+      crossorigin="anonymous"
+    ></script>
+    <link
+      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+      rel="stylesheet"
+      integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
+  </head>
 
-</head>
-
-<body id="page-top">
+  <body id="page-top">
     <!--Navigation-->
-    <nav class="navbar navbar-expand-lg navbar-light fixed-top navbar-shrink" id="mainNav">
-        <div class="container">
-            <a class="navbar-brand js-scroll-trigger" href="#page-top">BELLARIA</a>
-            <button class="navbar-toggler navbar-toggler-right collapsed" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-        Menu
-        <i class="fas fa-bars"></i>
-      </button>
-            <div class="navbar-collapse collapse" id="navbarResponsive">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger active" href="index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="#about-section">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="order.html">Order</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="#contact">Contact Us</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="login.html">Login</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="sign-up.html">Sign Up</a>
-                    </li>
-                </ul>
-            </div>
+    <nav
+      class="navbar navbar-expand-lg navbar-light fixed-top navbar-shrink"
+      id="mainNav"
+    >
+      <div class="container">
+        <a class="navbar-brand js-scroll-trigger" href="#page-top">BELLARIA</a>
+        <button
+          class="navbar-toggler navbar-toggler-right collapsed"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarResponsive"
+          aria-controls="navbarResponsive"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          Menu
+          <i class="fas fa-bars"></i>
+        </button>
+        <div class="navbar-collapse collapse" id="navbarResponsive">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger active" href="index.html"
+                >Home</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#about-section"
+                >About</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="order.html">Order</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#contact"
+                >Contact Us</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="login.html">Login</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="sign-up.html"
+                >Sign Up</a
+              >
+            </li>
+          </ul>
         </div>
+      </div>
     </nav>
 
     <!--Header-->
     <header class="masthead">
-        <div class="container d-flex h-100 align-items-center">
-            <div class="mx-auto text-center">
-                <h1 class="mx-auto my-0 text-uppercase">Bellaria</h1>
-                <h2 class="text-white-50 mx-auto mt-2 mb-5">Satisfying Sweet Cravings</h2>
-                <a href="order.html" class="btn btn-primary js-scroll-trigger">Order Now</a>
-            </div>
+      <div class="container d-flex h-100 align-items-center">
+        <div class="mx-auto text-center">
+          <h1 class="mx-auto my-0 text-uppercase">Bellaria</h1>
+          <h2 class="text-white-50 mx-auto mt-2 mb-5">
+            Satisfying Sweet Cravings
+          </h2>
+          <a href="order.html" class="btn btn-primary js-scroll-trigger"
+            >Order Now</a
+          >
         </div>
+      </div>
     </header>
     <section id="about" class="about-section text-center">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-8 mx-auto">
-                    <h2 class="text-white mb-4">About Us</h2>
-                    <p class="text-white-50"> Bellaria is our Database Project. I dont know anything about it. Please order.</p>
-                </div>
-            </div>
-            <img src="..\images\images.jpg" class="img-fluid" alt="">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-8 mx-auto">
+            <h2 class="text-white mb-4">About Us</h2>
+            <p class="text-white-50">
+              Bellaria is our Database Project. I dont know anything about it.
+              Please order.
+            </p>
+          </div>
         </div>
+        <img src="..\images\images.jpg" class="img-fluid" alt="" />
+      </div>
     </section>
-
 
     <section id="products">
-        <div class="container mt-5">
-            <div class="row">
-                <div class="col-lg-8 mx-auto">
-                    <h1 class="text-center mb-4">Our Products</h1>
-                </div>
-            </div>
-            <div class="card-deck">
-                <div class="row mb-5">
-                    <div class="col-sm card bg-black">
-                        <img src="images/cup2.jpg" alt="Cupcakes" class="img-fluid">
-                        <h3 class="card-title text-white text-center">Cupcakes</h3>
-                    </div>
-
-                    <div class="col-sm card bg-black">
-                        <img src="images/mac2.jpg" alt="Macarons" class="img-fluid">
-                        <h3 class="card-title text-white text-center">Macarons</h3>
-                    </div>
-
-                    <div class="col-sm card bg-black">
-                        <img src="images/brownies.jpg" alt="Brownies" class="img-fluid">
-                        <h3 class="card-title text-white text-center">Brownies</h3>
-                    </div>
-                </div>
-            </div>
-
-            <div class="card-deck">
-                <div class="row mb-5">
-                    <div class="col-sm card bg-black">
-                        <img src="images/cake2.jpg" alt="Cakes" class="img-fluid">
-                        <h3 class="card-title text-white text-center">Cakes</h3>
-                    </div>
-                    <div class="col-sm card bg-black">
-                        <img src="images/cookies.jpg" alt="Cookies" class="img-fluid">
-                        <h3 class="card-title text-white text-center">Cookies</h3>
-                    </div>
-
-                    <div class="col-sm card bg-black">
-                        <img src="images/cheesecake.jpg" alt="Cheesecake" class="img-fluid">
-                        <h3 class="card-title text-white text-center">Cheesecake</h3>
-                    </div>
-                </div>
-
-            </div>
+      <div class="container mt-5">
+        <div class="row">
+          <div class="col-lg-8 mx-auto">
+            <h1 class="text-center mb-4">Our Products</h1>
+          </div>
         </div>
+        <div class="card-deck">
+          <div class="row mb-5">
+            <div class="col-sm card bg-black">
+              <img src="images/cup2.jpg" alt="Cupcakes" class="img-fluid" />
+              <h3 class="card-title text-white text-center">Cupcakes</h3>
+            </div>
+
+            <div class="col-sm card bg-black">
+              <img src="images/mac2.jpg" alt="Macarons" class="img-fluid" />
+              <h3 class="card-title text-white text-center">Macarons</h3>
+            </div>
+
+            <div class="col-sm card bg-black">
+              <img src="images/brownies.jpg" alt="Brownies" class="img-fluid" />
+              <h3 class="card-title text-white text-center">Brownies</h3>
+            </div>
+          </div>
+        </div>
+
+        <div class="card-deck">
+          <div class="row mb-5">
+            <div class="col-sm card bg-black">
+              <img src="images/cake2.jpg" alt="Cakes" class="img-fluid" />
+              <h3 class="card-title text-white text-center">Cakes</h3>
+            </div>
+            <div class="col-sm card bg-black">
+              <img src="images/cookies.jpg" alt="Cookies" class="img-fluid" />
+              <h3 class="card-title text-white text-center">Cookies</h3>
+            </div>
+
+            <div class="col-sm card bg-black">
+              <img
+                src="images/cheesecake.jpg"
+                alt="Cheesecake"
+                class="img-fluid"
+              />
+              <h3 class="card-title text-white text-center">Cheesecake</h3>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
-
-
-
 
     <!--Contact section-->
     <section class="contact-section bg-black mt-2">
-        <div class="container pb-5">
-
-            <div class="row">
-                <div class="col-md-4 mb-3 mb-md-0">
-                    <div class="card py-4 h-100">
-                        <div class="card-body text-center">
-                            <i class="fa fa-address-book-o text-primary mb-2"></i>
-                            <h4 class="text-uppercase m-0">Address</h4>
-                            <hr class="my-4">
-                            <div class="small text-black-50">44000 NUST H-12, Islamabad</div>
-                        </div>
-                    </div>
+      <div class="container pb-5">
+        <div class="row">
+          <div class="col-md-4 mb-3 mb-md-0">
+            <div class="card py-4 h-100">
+              <div class="card-body text-center">
+                <i class="fa fa-address-book-o text-primary mb-2"></i>
+                <h4 class="text-uppercase m-0">Address</h4>
+                <hr class="my-4" />
+                <div class="small text-black-50">
+                  44000 NUST H-12, Islamabad
                 </div>
-
-                <div class="col-md-4 mb-3 mb-md-0">
-                    <div class="card py-4 h-100">
-                        <div class="card-body text-center">
-                            <i class="fa fa-envelope text-primary mb-2"></i>
-                            <h4 class="text-uppercase m-0">Email</h4>
-                            <hr class="my-4">
-                            <div class="small text-black-50">
-                                <a href="#">bellaria@gmail.com</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-md-4 mb-3 mb-md-0">
-                    <div class="card py-4 h-100">
-                        <div class="card-body text-center">
-                            <i class="fa fa-phone text-primary mb-2"></i>
-                            <h4 class="text-uppercase m-0">Phone</h4>
-                            <hr class="my-4">
-                            <div class="small text-black-50">+92-090078601</div>
-                        </div>
-                    </div>
-                </div>
+              </div>
             </div>
+          </div>
 
-            <div class="social d-flex justify-content-center">
-                <a href="#" class="mx-2">
-                    <i class="fa fa-twitter"></i>
-                </a>
-                <a href="#" class="mx-2">
-                    <i class="fa fa-facebook"></i>
-                </a>
-                <a href="#" class="mx-2">
-                    <i class="fa fa-github"></i>
-                </a>
+          <div class="col-md-4 mb-3 mb-md-0">
+            <div class="card py-4 h-100">
+              <div class="card-body text-center">
+                <i class="fa fa-envelope text-primary mb-2"></i>
+                <h4 class="text-uppercase m-0">Email</h4>
+                <hr class="my-4" />
+                <div class="small text-black-50">
+                  <a href="#">bellaria@gmail.com</a>
+                </div>
+              </div>
             </div>
+          </div>
 
+          <div class="col-md-4 mb-3 mb-md-0">
+            <div class="card py-4 h-100">
+              <div class="card-body text-center">
+                <i class="fa fa-phone text-primary mb-2"></i>
+                <h4 class="text-uppercase m-0">Phone</h4>
+                <hr class="my-4" />
+                <div class="small text-black-50">+92-090078601</div>
+              </div>
+            </div>
+          </div>
         </div>
+
+        <div class="social d-flex justify-content-center">
+          <a href="#" class="mx-2">
+            <i class="fa fa-twitter"></i>
+          </a>
+          <a href="#" class="mx-2">
+            <i class="fa fa-facebook"></i>
+          </a>
+          <a href="#" class="mx-2">
+            <i class="fa fa-github"></i>
+          </a>
+        </div>
+      </div>
     </section>
-
-</body>
-
+  </body>
 </html>
