--- a/sign-up.html
+++ b/sign-up.html
@@ -1,60 +1,122 @@
 <!DOCTYPE html>
 <html>
-
-<head>
+  <head>
     <title>BELLARIA - Login</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <link href="css/style-login.css" rel="stylesheet">
-    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-</head>
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+      crossorigin="anonymous"
+    ></script>
+    <link href="css/style-login.css" rel="stylesheet" />
+    <link
+      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+      rel="stylesheet"
+      integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
+      crossorigin="anonymous"
+    />
+  </head>
 
-<body>
+  <body>
     <div class="container">
-        <div class="row">
-            <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
-                <div class="card card-signin my-5">
-                    <div class="card-body">
-                        <h5 class="card-title text-center">Sign Up</h5>
-                        <form class="form-signin">
-                            <div class="form-label-group">
-                                <input type="text" id="inputName" class="form-control" placeholder="Full Name" required autofocus>
-                                <label for="inputName">Full Name</label>
-                            </div>
-                            <div class="form-label-group">
-                                <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
-                                <label for="inputEmail">Email address</label>
-                            </div>
-
-                            <div class="form-label-group">
-                                <input type="text" id="inputPhone" class="form-control" placeholder="Phone Number" required>
-                                <label for="inputPhone">Phone</label>
-                            </div>
-
-                            <div class="form-label-group">
-                                <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
-                                <label for="inputPassword">Password</label>
-                            </div>
-
-                            <div class="form-label-group">
-                                <input type="password" id="inputCPassword" class="form-control" placeholder="Confirm Password" required>
-                                <label for="inputCPassword">Confirm Password</label>
-                            </div>
-
-                            <div class="form-label-group">
-                                <input type="date" id="inputBirthday" class="form-control" placeholder="Birthday" required>
-                                <label for="inputBirthday">Birthday</label>
-                            </div>
-
-                            <button style="background-color: #433535eb" class="btn btn-lg btn-primary btn-block text-uppercase">Sign Up</button>
-                            <button style="background-color: #433535eb" class="btn btn-lg btn-primary btn-block text-uppercase">Already have an account? Login here!</button>
-                        </form>
-                    </div>
+      <div class="row">
+        <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
+          <div class="card card-signin my-5">
+            <div class="card-body">
+              <h5 class="card-title text-center">Sign Up</h5>
+              <form id="form" class="form-signin">
+                <div class="form-label-group">
+                  <input
+                    type="text"
+                    id="inputName"
+                    class="form-control"
+                    placeholder="Full Name"
+                    required
+                    autofocus
+                  />
+                  <label for="inputName">Full Name</label>
                 </div>
+                <div class="form-label-group">
+                  <input
+                    type="email"
+                    id="inputEmail"
+                    class="form-control"
+                    placeholder="Email address"
+                    required
+                    autofocus
+                  />
+                  <label for="inputEmail">Email address</label>
+                </div>
+
+                <div class="form-label-group">
+                  <input
+                    type="text"
+                    id="inputPhone"
+                    class="form-control"
+                    placeholder="Phone Number"
+                    required
+                  />
+                  <label for="inputPhone">Phone</label>
+                </div>
+
+                <div class="form-label-group">
+                  <input
+                    type="password"
+                    id="inputPassword"
+                    class="form-control"
+                    placeholder="Password"
+                    required
+                  />
+                  <label for="inputPassword">Password</label>
+                </div>
+
+                <div class="form-label-group">
+                  <input
+                    type="password"
+                    id="inputCPassword"
+                    class="form-control"
+                    placeholder="Confirm Password"
+                    required
+                  />
+                  <label for="inputCPassword">Confirm Password</label>
+                </div>
+
+                <div class="form-label-group">
+                  <input
+                    type="date"
+                    id="inputBirthday"
+                    class="form-control"
+                    placeholder="Birthday"
+                    required
+                  />
+                  <label for="inputBirthday">Birthday</label>
+                </div>
+
+                <button
+                  style="background-color: #433535eb"
+                  class="btn btn-lg btn-primary btn-block text-uppercase"
+                >
+                  Sign Up
+                </button>
+                <button
+                  id="loginBtn"
+                  style="background-color: #433535eb"
+                  class="btn btn-lg btn-primary btn-block text-uppercase"
+                >
+                  Already have an account? Login here!
+                </button>
+              </form>
             </div>
+          </div>
         </div>
+      </div>
     </div>
-</body>
 
-
+    <script src="scripts/signup.js"></script>
+  </body>
 </html>
