Add Smooth Scroll

--- a/header.html
+++ b/header.html
@@ -49,29 +49,34 @@
         <div class="navbar-collapse collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger active" href="index.html"
+              <a id="home" class="nav-link js-scroll-trigger" href="index.html"
                 >Home</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#about-section"
+              <a
+                id="about"
+                class="nav-link js-scroll-trigger"
+                href="#aboutSection"
                 >About</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="order.html">Order</a>
+              <a id="order" class="nav-link js-scroll-trigger" href="order.html"
+                >Order</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#contact"
+              <a id="contact" class="nav-link js-scroll-trigger" href="#contact"
                 >Contact Us</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="login.html">Login</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="sign-up.html"
-                >Sign Up</a
+              <a
+                id="loginOrNew"
+                class="nav-link js-scroll-trigger"
+                href="login.html"
+                >Login/Signup</a
               >
             </li>
           </ul>
