--- a/login.html
+++ b/login.html
@@ -16,8 +16,6 @@
       crossorigin="anonymous"
     ></script>
 
-    <link href="css/style-login.css" rel="stylesheet" />
-
     <link
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
       rel="stylesheet"
@@ -28,13 +26,25 @@
     <script src="scripts/jquery-3.4.1.min.js"></script>
     <script>
       $(function() {
-        $("#header").load("header.html");
+        $("#header").load("header.html", function() {
+          let navBar = document.getElementById("mainNav");
+          let headerDiv = document.getElementById("header");
+          let loginTab = document.getElementById("loginOrNew");
+
+          headerDiv.style.height = navBar.getBoundingClientRect().height + "px";
+
+          loginTab.classList.add("active");
+        });
       });
     </script>
   </head>
 
   <body>
     <div id="header"></div>
+
+    <link href="css/style-login.css" rel="stylesheet" />
+
+    <script></script>
 
     <div class="container">
       <div class="row">
