--- a/index.html
+++ b/index.html
@@ -1,264 +1,286 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8" />
-    <title>
-      Bellaria
-    </title>
 
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-      crossorigin="anonymous"
-    />
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-      crossorigin="anonymous"
-    ></script>
-    <link
-      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-      rel="stylesheet"
-      integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" type="text/css" href="css/style.css" />
+<head>
+  <meta charset="UTF-8" />
+  <title>
+    Bellaria
+  </title>
 
-    <script src="scripts/jquery-3.4.1.min.js"></script>
-    <script>
-      $(function() {
-        $("#header").load("header.html", function() {
-          let navBar = document.getElementById("mainNav");
-          let headerDiv = document.getElementById("header");
-          let homeTab = document.getElementById("home");
-          let aboutTab = document.getElementById("about");
-          let headSection = document.getElementById("headSection");
-          let aboutSection = document.getElementById("aboutSection");
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"></script>
+  <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
+    integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous" />
+  <link rel="stylesheet" type="text/css" href="css/style.css" />
 
-          let isAboutAutoScroll = false;
-          let isHeadAutoScroll = false;
+  <script src="scripts/jquery-3.4.1.min.js"></script>
+  <script>
+    $(function () {
+      $("#header").load("header.html", function () {
+        let navBar = document.getElementById("mainNav");
+        let headerDiv = document.getElementById("header");
+        let homeTab = document.getElementById("home");
+        let aboutTab = document.getElementById("about");
+        let orderTab = document.getElementById("order");
+        let headSection = document.getElementById("headSection");
+        let aboutSection = document.getElementById("aboutSection");
+        let productsSection = document.getElementById("productsSection");
 
-          headerDiv.style.height = navBar.getBoundingClientRect().height + "px";
+        let isAutoScroll = false;
 
+        headerDiv.style.height = navBar.getBoundingClientRect().height + "px";
+
+        homeTab.classList.add("active");
+
+        const aboutTop = aboutSection.offsetTop;
+        const headerHeight = headerDiv.getBoundingClientRect().height;
+        const productsSectionTop =
+          headSection.getBoundingClientRect().height +
+          aboutSection.getBoundingClientRect().height;
+
+        homeTab.addEventListener("click", event => {
+          event.preventDefault();
           homeTab.classList.add("active");
+          aboutTab.classList.remove("active");
+          orderTab.classList.remove("active");
 
-          const aboutTop = aboutSection.offsetTop;
-          const headerHeight = headerDiv.getBoundingClientRect().height;
+          $("html, body").animate(
+            {
+              scrollTop: headerHeight
+            },
+            100,
+            function () {
+              window.location.offsetTop = headerHeight;
+              isAutoScroll = true;
+            }
+          );
+        });
 
-          homeTab.addEventListener("click", event => {
+        aboutTab.addEventListener("click", event => {
+          if (this.hash !== "") {
             event.preventDefault();
-            homeTab.classList.add("active");
-            aboutTab.classList.remove("active");
+
+            aboutTab.classList.add("active");
+            homeTab.classList.remove("active");
+            orderTab.classList.remove("active");
+
+            let hash = aboutTab.hash;
 
             $("html, body").animate(
               {
-                scrollTop: headerHeight
+                scrollTop: $(hash).offset().top
               },
               100,
-              function() {
-                window.location.offsetTop = headerHeight;
-                isHeadAutoScroll = true;
-                isAboutAutoScroll = false;
+              function () {
+                window.location.hash = hash;
+                isAutoScroll = true;
               }
             );
-          });
+          }
+        });
 
-          aboutTab.addEventListener("click", event => {
-            if (this.hash !== "") {
-              event.preventDefault();
+        orderTab.addEventListener("click", event => {
+          event.preventDefault();
 
+          orderTab.classList.add("active");
+          homeTab.classList.remove("active");
+          aboutTab.classList.remove("active");
+
+          $("html, body").animate(
+            {
+              scrollTop: productsSectionTop
+            },
+            100,
+            function () {
+              window.location.offsetTop = productsSectionTop;
+              isAutoScroll = true;
+            }
+          );
+        });
+
+        document.addEventListener("scroll", () => {
+          let currentTopPos =
+            document.documentElement.scrollTop + headerHeight;
+
+          if ((currentTopPos >= aboutTop - 100) && (currentTopPos < productsSectionTop - 100)) {
+            if (!isAutoScroll) {
               aboutTab.classList.add("active");
               homeTab.classList.remove("active");
-
-              let hash = aboutTab.hash;
-
-              $("html, body").animate(
-                {
-                  scrollTop: $(hash).offset().top
-                },
-                100,
-                function() {
-                  window.location.hash = hash;
-                  isAboutAutoScroll = true;
-                  isHeadAutoScroll = false;
-                }
-              );
+              orderTab.classList.remove("active");
             }
-          });
-
-          document.addEventListener("scroll", event => {
-            let currentTopPos =
-              (document.body.scrollTop || document.documentElement.scrollTop) +
-              headerHeight;
-
-            if (currentTopPos >= aboutTop - 100) {
-              if (!isHeadAutoScroll && !isAboutAutoScroll) {
-                aboutTab.classList.add("active");
-                homeTab.classList.remove("active");
-              }
-            } else {
-              if (isHeadAutoScroll) {
-                // homeTab.classList.add("active");
-                if (currentTopPos < aboutTop - 100) {
-                  isHeadAutoScroll = false;
-                }
-              } else if (isAboutAutoScroll) {
-                // aboutTab.classList.add("active");
-                if (currentTopPos >= aboutTop - 100) {
-                  isAboutAutoScroll = false;
-                }
-              } else {
+          } else if (currentTopPos >= productsSectionTop - 100) {
+            if (!isAutoScroll) {
+              orderTab.classList.add("active");
+              aboutTab.classList.remove("active");
+              homeTab.classList.remove("active");
+            }
+          } else {
+            if (isAutoScroll) {
+              if (currentTopPos < aboutTop - 100) {
                 homeTab.classList.add("active");
                 aboutTab.classList.remove("active");
+                orderTab.classList.remove("active");
+                isAutoScroll = false;
+              } else if ((currentTopPos >= aboutTop - 100) && (currentTopPos < productsSectionTop - 100)) {
+                aboutTab.classList.add("active");
+                homeTab.classList.remove("active");
+                orderTab.classList.remove("active");
+                isAutoScroll = false;
+              } else if (currentTopPos >= productsSectionTop - 100) {
+                orderTab.classList.add("active");
+                homeTab.classList.remove("active");
+                aboutTab.classList.remove("active");
+                isAutoScroll = false;
               }
-
-              console.log("currentTop: " + currentTopPos);
-              console.log("isAboutScroll: " + isAboutAutoScroll);
-              console.log("isHeadScroll: " + isHeadAutoScroll);
+            } else {
+              homeTab.classList.add("active");
+              aboutTab.classList.remove("active");
+              orderTab.classList.remove("active");
             }
-          });
+          }
+
+          console.log("currentTop: " + currentTopPos);
+          console.log("isAutoScroll: " + isAutoScroll);
         });
       });
-    </script>
-  </head>
+    });
+  </script>
+</head>
 
-  <body id="page-top">
-    <div id="header"></div>
+<body id="page-top">
+  <div id="header"></div>
 
-    <!--Header-->
-    <header id="headSection" class="masthead">
-      <div class="container d-flex h-100 align-items-center">
-        <div class="mx-auto text-center">
-          <h1 class="mx-auto my-0 text-uppercase">Bellaria</h1>
-          <h2 class="text-white-50 mx-auto mt-2 mb-5">
-            Satisfying Sweet Cravings
-          </h2>
-          <a href="order.html" class="btn btn-primary js-scroll-trigger"
-            >Order Now</a
-          >
+  <!--Header-->
+  <header id="headSection" class="masthead">
+    <div class="container d-flex h-100 align-items-center">
+      <div class="mx-auto text-center">
+        <h1 class="mx-auto my-0 text-uppercase">Bellaria</h1>
+        <h2 class="text-white-50 mx-auto mt-2 mb-5">
+          Satisfying Sweet Cravings
+        </h2>
+        <a href="order.html" class="btn btn-primary js-scroll-trigger">Order Now</a>
+      </div>
+    </div>
+  </header>
+  <section id="aboutSection" class="about-section text-center">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-8 mx-auto">
+          <h2 class="text-white mb-4">About Us</h2>
+          <p class="text-white-50">
+            Bellaria is our Database Project. I dont know anything about it.
+            Please order.
+          </p>
         </div>
       </div>
-    </header>
-    <section id="aboutSection" class="about-section text-center">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-8 mx-auto">
-            <h2 class="text-white mb-4">About Us</h2>
-            <p class="text-white-50">
-              Bellaria is our Database Project. I dont know anything about it.
-              Please order.
-            </p>
-          </div>
+      <img src="..\images\images.jpg" class="img-fluid" alt="" />
+    </div>
+  </section>
+
+  <section id="productsSection">
+    <div class="container mt-5">
+      <div class="row">
+        <div class="col-lg-8 mx-auto">
+          <h1 class="text-center mb-4">Our Products</h1>
         </div>
-        <img src="..\images\images.jpg" class="img-fluid" alt="" />
       </div>
-    </section>
-
-    <section id="products">
-      <div class="container mt-5">
-        <div class="row">
-          <div class="col-lg-8 mx-auto">
-            <h1 class="text-center mb-4">Our Products</h1>
+      <div class="card-deck">
+        <div class="row mb-5">
+          <div class="col-sm card bg-black">
+            <img src="images/cup2.jpg" alt="Cupcakes" class="img-fluid" />
+            <h3 class="card-title text-white text-center">Cupcakes</h3>
           </div>
-        </div>
-        <div class="card-deck">
-          <div class="row mb-5">
-            <div class="col-sm card bg-black">
-              <img src="images/cup2.jpg" alt="Cupcakes" class="img-fluid" />
-              <h3 class="card-title text-white text-center">Cupcakes</h3>
-            </div>
 
-            <div class="col-sm card bg-black">
-              <img src="images/mac2.jpg" alt="Macarons" class="img-fluid" />
-              <h3 class="card-title text-white text-center">Macarons</h3>
-            </div>
-
-            <div class="col-sm card bg-black">
-              <img src="images/brownies.jpg" alt="Brownies" class="img-fluid" />
-              <h3 class="card-title text-white text-center">Brownies</h3>
-            </div>
+          <div class="col-sm card bg-black">
+            <img src="images/mac2.jpg" alt="Macarons" class="img-fluid" />
+            <h3 class="card-title text-white text-center">Macarons</h3>
           </div>
-        </div>
 
-        <div class="card-deck">
-          <div class="row mb-5">
-            <div class="col-sm card bg-black">
-              <img src="images/cake2.jpg" alt="Cakes" class="img-fluid" />
-              <h3 class="card-title text-white text-center">Cakes</h3>
-            </div>
-            <div class="col-sm card bg-black">
-              <img src="images/cookies.jpg" alt="Cookies" class="img-fluid" />
-              <h3 class="card-title text-white text-center">Cookies</h3>
-            </div>
-
-            <div class="col-sm card bg-black">
-              <img
-                src="images/cheesecake.jpg"
-                alt="Cheesecake"
-                class="img-fluid"
-              />
-              <h3 class="card-title text-white text-center">Cheesecake</h3>
-            </div>
+          <div class="col-sm card bg-black">
+            <img src="images/brownies.jpg" alt="Brownies" class="img-fluid" />
+            <h3 class="card-title text-white text-center">Brownies</h3>
           </div>
         </div>
       </div>
-    </section>
 
-    <!--Contact section-->
-    <section class="contact-section bg-black mt-2">
-      <div class="container pb-5">
-        <div class="row">
-          <div class="col-md-4 mb-3 mb-md-0">
-            <div class="card py-4 h-100">
-              <div class="card-body text-center">
-                <i class="fa fa-address-book-o text-primary mb-2"></i>
-                <h4 class="text-uppercase m-0">Address</h4>
-                <hr class="my-4" />
-                <div class="small text-black-50">
-                  44000 NUST H-12, Islamabad
-                </div>
-              </div>
-            </div>
+      <div class="card-deck">
+        <div class="row mb-5">
+          <div class="col-sm card bg-black">
+            <img src="images/cake2.jpg" alt="Cakes" class="img-fluid" />
+            <h3 class="card-title text-white text-center">Cakes</h3>
+          </div>
+          <div class="col-sm card bg-black">
+            <img src="images/cookies.jpg" alt="Cookies" class="img-fluid" />
+            <h3 class="card-title text-white text-center">Cookies</h3>
           </div>
 
-          <div class="col-md-4 mb-3 mb-md-0">
-            <div class="card py-4 h-100">
-              <div class="card-body text-center">
-                <i class="fa fa-envelope text-primary mb-2"></i>
-                <h4 class="text-uppercase m-0">Email</h4>
-                <hr class="my-4" />
-                <div class="small text-black-50">
-                  <a href="#">bellaria@gmail.com</a>
-                </div>
-              </div>
-            </div>
+          <div class="col-sm card bg-black">
+            <img src="images/cheesecake.jpg" alt="Cheesecake" class="img-fluid" />
+            <h3 class="card-title text-white text-center">Cheesecake</h3>
           </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
-          <div class="col-md-4 mb-3 mb-md-0">
-            <div class="card py-4 h-100">
-              <div class="card-body text-center">
-                <i class="fa fa-phone text-primary mb-2"></i>
-                <h4 class="text-uppercase m-0">Phone</h4>
-                <hr class="my-4" />
-                <div class="small text-black-50">+92-090078601</div>
+  <!--Contact section-->
+  <section class="contact-section bg-black mt-2">
+    <div class="container pb-5">
+      <div class="row">
+        <div class="col-md-4 mb-3 mb-md-0">
+          <div class="card py-4 h-100">
+            <div class="card-body text-center">
+              <i class="fa fa-address-book-o text-primary mb-2"></i>
+              <h4 class="text-uppercase m-0">Address</h4>
+              <hr class="my-4" />
+              <div class="small text-black-50">
+                44000 NUST H-12, Islamabad
               </div>
             </div>
           </div>
         </div>
 
-        <div class="social d-flex justify-content-center">
-          <a href="#" class="mx-2">
-            <i class="fa fa-twitter"></i>
-          </a>
-          <a href="#" class="mx-2">
-            <i class="fa fa-facebook"></i>
-          </a>
-          <a href="#" class="mx-2">
-            <i class="fa fa-github"></i>
-          </a>
+        <div class="col-md-4 mb-3 mb-md-0">
+          <div class="card py-4 h-100">
+            <div class="card-body text-center">
+              <i class="fa fa-envelope text-primary mb-2"></i>
+              <h4 class="text-uppercase m-0">Email</h4>
+              <hr class="my-4" />
+              <div class="small text-black-50">
+                <a href="#">bellaria@gmail.com</a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4 mb-3 mb-md-0">
+          <div class="card py-4 h-100">
+            <div class="card-body text-center">
+              <i class="fa fa-phone text-primary mb-2"></i>
+              <h4 class="text-uppercase m-0">Phone</h4>
+              <hr class="my-4" />
+              <div class="small text-black-50">+92-090078601</div>
+            </div>
+          </div>
         </div>
       </div>
-    </section>
-  </body>
+
+      <div class="social d-flex justify-content-center">
+        <a href="#" class="mx-2">
+          <i class="fa fa-twitter"></i>
+        </a>
+        <a href="#" class="mx-2">
+          <i class="fa fa-facebook"></i>
+        </a>
+        <a href="#" class="mx-2">
+          <i class="fa fa-github"></i>
+        </a>
+      </div>
+    </div>
+  </section>
+</body>
+
 </html>
