--- a/order.html
+++ b/order.html
@@ -3,39 +3,118 @@
 
 <head>
     <title>Bellaria - Order</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
+
+    <script src="scripts/jquery-3.4.1.min.js"></script>
+
+    <script>
+        $(function () {
+            $("#header").load("header.html", function () {
+                let navBar = document.getElementById("mainNav");
+                let headerDiv = document.getElementById("header");
+                let orderTab = document.getElementById("order");
+
+                headerDiv.style.height = navBar.getBoundingClientRect().height + "px";
+
+                orderTab.classList.add("active");
+            });
+        });
+    </script>
+
+    <style>
+        body {
+            overflow: auto;
+        }
+
+        .category-active {
+            padding-bottom: 6px;
+            border-bottom: 1px solid brown;
+        }
+
+        .order-body {
+            width: 90%;
+            height: 100vh;
+            margin: 20px auto;
+        }
+
+        .cart {
+            width: 40%;
+            position: fixed;
+            right: 1%;
+            height: 100vh;
+        }
+
+        .upper-header {
+            width: 60%;
+            position: fixed;
+        }
+    </style>
 
 </head>
 
 <body id="page-top">
-    <!--Navigation-->
-    <nav class="navbar navbar-expand-lg navbar-light fixed-top navbar-shrink" id="mainNav">
-        <div class="container">
-            <a class="navbar-brand js-scroll-trigger" href="#page-top">BELLARIA</a>
-            <button class="navbar-toggler navbar-toggler-right collapsed" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-        Menu
-        <i class="fas fa-bars"></i>
-      </button>
-            <div class="navbar-collapse collapse" id="navbarResponsive">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="#home">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="#about">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger active" href="#order">Order</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="#contact">Contact Us</a>
-                    </li>
-                </ul>
+    <!-- <div id="header"></div> -->
+
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+
+    <section class="order-body">
+        <div class="row">
+            <div class="col-8">
+                <div class="row upper-header d-flex justify-content-around">
+                    <div class="col-3">
+                        <h4 class="text-center category-active">Cupcakes</h4>
+                    </div>
+                    <div class="col-3">
+                        <h4 class="text-center">Cakes</h4>
+                    </div>
+                    <div class="col-3">
+                        <h4 class="text-center">Cookies</h4>
+                    </div>
+                    <div class="col-3">
+                        <h4 class="text-center">Donuts</h4>
+                    </div>
+                </div>
+            </div>
+            <div class="col-4 cart">
+                <h4 class="text-center">Your Order - Bellaria</h4> <br>
+                <p class="text-justify text-center">You haven't added anything to your cart yet! Start adding to your
+                    cart</p> <br>
+                <hr>
+                <br>
+                <div class="row">
+                    <div class="col-6">
+                        Subtotal
+                    </div>
+                    <div class="col-6 d-flex flex-row-reverse">
+                        <span>PKR0.00</span>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-6">
+                        Delievery Fee
+                    </div>
+                    <div class="col-6 d-flex flex-row-reverse">
+                        <span>PKR0.00</span>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-6">
+                        Total
+                    </div>
+                    <div class="col-6 d-flex flex-row-reverse">
+                        <span>PKR0.00</span>
+                    </div>
+                </div>
             </div>
         </div>
-    </nav>
+
+
+
+    </section>
 
 </body>
 
